fixxed the horizontal overflow on mobile view at the landinpage when the burger menu was transitioned out of the body

--- a/css/index.css
+++ b/css/index.css
@@ -36,6 +36,7 @@
   padding-bottom: 50vh;
   transform: translateX(100%);
   transition: transform 0.5s ease-in;
+  display: none;
 }
 @keyframes navLinkFade {
   from {
@@ -267,6 +268,7 @@ html body .subtitle {
     padding-bottom: 50vh;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    display: none;
   }
 }
 .nav .nav-links a {
@@ -311,11 +313,18 @@ html body .subtitle {
 }
 .nav .nav-active {
   transform: translateX(0%);
+  display: flex;
 }
 body .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /*         @media @tablet {
+            max-width: 100vw !important;
+            min-width: 10vw !important;
+            background-color: red;
+            overflow-x: hidden;
+        } */
 }
 body .home-main-section {
   display: flex;
