--- a/less/landingpage.less
+++ b/less/landingpage.less
@@ -1,7 +1,16 @@
 
 body {
     .header {
-        .sufficiently-spaced-row
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+/*         @media @tablet {
+            max-width: 100vw !important;
+            min-width: 10vw !important;
+            background-color: red;
+            overflow-x: hidden;
+        } */
     }
 
     .home-main-section {
