--- a/less/mixins.less
+++ b/less/mixins.less
@@ -70,6 +70,7 @@
     padding-bottom: 50vh;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    display: none;
 }
 
 
