--- a/less/navigation.less
+++ b/less/navigation.less
@@ -51,6 +51,7 @@
 
     .nav-active{
         transform: translateX(0%);
+        display: flex;
     }
 }
 
